--- a/templates/cmsplugin_blog/cmsplugin_blog_base.html
+++ b/templates/cmsplugin_blog/cmsplugin_blog_base.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "skybox.html" %}
 
-{% block body %}
+{% block base_content %}
     {% block left-col %}{% endblock %}
     {% block right-col %}{% endblock %}
 {% endblock %}
