own contact form

--- a/templates/skybox.html
+++ b/templates/skybox.html
@@ -100,9 +100,7 @@
 <div class="footer-wrapper">
     <div class="footer-light"></div>
     <div class="footer">
-        {% block footer_block %}
-            {% placeholder footer %}
-        {% endblock %}
+        {% include 'footer_content.html' %}
         <div class="clear"></div>
     </div>
 </div>
