--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1988,6 +1988,9 @@ ul.feed li img {
     color: #606060;
     resize: none;
 }
+.forms fieldset .text-input{
+    width: 60%;
+}
 .forms fieldset .text-input:focus,
 .forms fieldset .text-area:focus,
 .searchform input:focus,
@@ -2049,8 +2052,8 @@ ul.feed li img {
     border: none;
     padding: 0;
 }
-.forms span.error {
-    display: none
+.forms textarea + span.error {
+    float: right;
 }
 .forms .button-row span.error {
     padding: 0;
