--- a/templates/cmsplugin_blog/month_links_snippet.html
+++ b/templates/cmsplugin_blog/month_links_snippet.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<h3>{% trans "Archive" %}:</h3>
+<h3>{% trans "Monthly archives" %}:</h3>
 <ul class="list">
 {% for d in dates reversed %}
   <li><a href="{% url "blog_archive_month" year=d.year month=d|date:"m" %}">{{ d|date:"F Y" }}</a></li>
